--- a/Product.html
+++ b/Product.html
@@ -121,7 +121,7 @@
             </div> 
             <div class="row">
            <div class="col-3">
-               <a href="../images/greenP.jpg" data-lightbox="mygallery"><img src="../images/greenP.jpg"></a>
+               <a href="./images/greenP.JPG" data-lightbox="mygallery"><img src="./images/greenP.JPG"></a>
                <h4>Green Tea(Premium)</h4>
                  <div class="rating">
                    <i class="fas fa-star"></i>
