--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <h2 class="title">Featured Products</h2>
           <div class="row">
            <div class="col-3">
-              <a href="Product_details.html"><img src="../images/honey.PNG"></a>
+              <a href="Product_details.html"><img src="./images/honey.PNG"></a>
                <a href="Product_details.html"><h4>Shundarban's Honey</h4></a>
                  <div class="rating">
                    <i class="fas fa-star"></i>
@@ -58,7 +58,7 @@
                <p>৳550.00</p>
            </div>
            <div class="col-3">
-              <img src="../images/mustard.PNG">
+              <img src="./images/mustard.PNG">
                 <h4>Mustard Oil</h4>
                  <div class="rating">
                    <i class="fas fa-star"></i>
@@ -70,7 +70,7 @@
                <p>৳220.00</p>
            </div>
             <div class="col-3">
-              <img src="../images/coconut.PNG">
+              <img src="./images/coconut.PNG">
                 <h4>Coconut Oil</h4>
                   <div class="rating">
                    <i class="fas fa-star"></i>
@@ -84,7 +84,7 @@
            </div>
             <div class="row">
              <div class="col-3">
-              <img src="../images/garlic.PNG">
+              <img src="./images/garlic.PNG">
                  <h4>Garlic Pickle</h4>
                   <div class="rating">
                    <i class="fas fa-star"></i>
@@ -96,7 +96,7 @@
                <p>৳250.00</p>
              </div>
              <div class="col-3">
-              <img src="../images/ghee.JPG">
+              <img src="./images/ghee.JPG">
                  <h4>Ghee</h4>
                   <div class="rating">
                    <i class="fas fa-star"></i>
@@ -114,7 +114,7 @@
         <h2 class="title">Latest Products</h2>
             <div class="row">
            <div class="col-3">
-              <img src="../images/greenP.JPG">
+              <img src="./images/greenP.JPG">
                <h4>Green Tea(Premium)</h4>
                  <div class="rating">
                    <i class="fas fa-star"></i>
@@ -126,7 +126,7 @@
                <p>৳200.00</p>
            </div>
            <div class="col-3">
-              <img src="../images/greenS.JPG">
+              <img src="./images/greenS.JPG">
                 <h4>Green Tea(Standard)</h4>
                  <div class="rating">
                    <i class="fas fa-star"></i>
@@ -138,7 +138,7 @@
                <p>৳150.00</p>
            </div>
             <div class="col-3">
-              <img src="../images/blackT.JPG">
+              <img src="./images/blackT.JPG">
                 <h4>Black Tea(Standard)</h4>
                   <div class="rating">
                    <i class="fas fa-star"></i>
@@ -152,7 +152,7 @@
            </div>
              <div class="row">
            <div class="col-3">
-              <img src="../images/kalo.JPEG">
+              <img src="./images/kalo.JPEG">
                <h4>Black Seed Oil</h4>
                  <div class="rating">
                    <i class="fas fa-star"></i>
@@ -164,7 +164,7 @@
                <p>৳180.00</p>
            </div>
            <div class="col-3">
-              <img src="../images/aps.JPG">
+              <img src="./images/aps.JPG">
                 <h4>APS Mask</h4>
                  <div class="rating">
                     <i class="fas fa-star"></i>
@@ -176,7 +176,7 @@
                <p>৳2899.00</p>
            </div>
             <div class="col-3">
-              <img src="../images/colmi.JPG">
+              <img src="./images/colmi.JPG">
                 <h4>Colmi p8 Pro<br>Smartwatch</h4>
                   <div class="rating">
                     <i class="fas fa-star"></i>
@@ -190,7 +190,7 @@
            </div>
              <div class="row">
            <div class="col-3">
-              <img src="../images/enchen.JPG">
+              <img src="./images/enchen.JPG">
                <h4>Xiomi Enchen Turbo<br>Boost Treamer</h4>
                  <div class="rating">
                    <i class="fas fa-star"></i>
@@ -202,7 +202,7 @@
                <p>৳1700.00</p>
            </div>
            <div class="col-3">
-              <img src="../images/crispy.JPG">
+              <img src="./images/crispy.JPG">
                 <h4>Chicken Crispy Roll</h4>
                  <div class="rating">
                     <i class="fas fa-star"></i>
@@ -214,7 +214,7 @@
                <p>৳140.00</p>
            </div>
             <div class="col-3">
-              <img src="../images/shingara.JPG">
+              <img src="./images/shingara.JPG">
                 <h4>Shingara</h4>
                   <div class="rating">
                     <i class="fas fa-star"></i>
